Ensure images don't overflow

--- a/warehouse/static/warehouse/less/warehouse.less
+++ b/warehouse/static/warehouse/less/warehouse.less
@@ -59,6 +59,10 @@
   .downloads {
     margin-top: 4em;
   }
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .metadata {
